<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/standard_margin"
    android:paddingEnd="@dimen/double_margin"
    android:paddingStart="@dimen/double_margin"
    android:paddingTop="@dimen/double_margin">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/double_margin"
        android:text="@string/use_this_location"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text" />

    <TextView
        android:id="@+id/coordinates_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text_view"
        android:layout_marginBottom="@dimen/half_margin"
        tools:text="31.124554''N, 29.00006455''E" />

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinates_text_view"
        android:layout_marginBottom="@dimen/standard_margin"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="19 Khaleel ElMaghraby, Mandara Bahary, Alexandria, Egypt" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/address_text_view">

        <ImageView
            android:id="@+id/map_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/standard_margin"
            android:contentDescription="@string/map"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/marker_image_view"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/marker"
            android:scaleType="centerInside"
            android:src="@drawable/ic_map_center_pin" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end">

        <Button
            android:id="@+id/change_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/standard_margin"
            android:text="@string/change_location"
            android:textColor="@color/dodger_blue" />

        <Button
            android:id="@+id/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/standard_margin"
            android:text="@string/select"
            android:textColor="@color/dodger_blue" />

    </LinearLayout>

</RelativeLayout>