<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="saleh.ma.mostafa.gmail.com.advancedplacepicker.activities.AdvancedPlacePicker">

    <fragment
        android:id="@+id/map_fragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/select_location_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/marker_image_view"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/marker"
        android:scaleType="centerInside"
        android:src="@drawable/ic_map_center_pin"
        app:layout_constraintBottom_toBottomOf="@id/map_fragment"
        app:layout_constraintEnd_toEndOf="@id/map_fragment"
        app:layout_constraintStart_toStartOf="@id/map_fragment"
        app:layout_constraintTop_toTopOf="@id/map_fragment" />

    <android.support.v7.widget.CardView
        android:id="@+id/search_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_margin"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/half_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/search_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:drawableLeft="@drawable/ic_search_dark"
            android:drawablePadding="@dimen/extra_double_margin"
            android:drawableStart="@drawable/ic_search_dark"
            android:ellipsize="end"
            android:maxLines="1"
            android:minHeight="@dimen/extra_double_margin"
            android:padding="@dimen/half_margin"
            android:text="@string/search"
            android:textSize="@dimen/large_text" />

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/my_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/double_margin"
        android:src="@drawable/ic_my_location"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/select_location_text_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/select_location_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_location_pin"
        android:drawablePadding="@dimen/extra_double_margin"
        android:drawableStart="@drawable/ic_location_pin"
        android:enabled="false"
        android:gravity="center_vertical"
        android:padding="@dimen/double_margin"
        android:text="@string/select_this_location"
        android:textAllCaps="false"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>